objects/Additional_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Amount__c</fullName>
        <label>Billable Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Amount__c</fullName>
        <label>Employee Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Payments</relationshipLabel>
        <relationshipName>Additional_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markup_Percentage__c</fullName>
        <label>Markup %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Code</label>
        <referenceTo>tc9_ti__PayCodeMaster__c</referenceTo>
        <relationshipLabel>Additional Payments</relationshipLabel>
        <relationshipName>Additional_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>ts2__Placement__c</referenceTo>
        <relationshipLabel>Additional Payments</relationshipLabel>
        <relationshipName>Additional_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiter_Notes__c</fullName>
        <label>Recruiter Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>tc9_ti__Time_Sheet__c</referenceTo>
        <relationshipLabel>Additional Payments</relationshipLabel>
        <relationshipName>Additional_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>tc9_ti__Transaction__c</referenceTo>
        <relationshipLabel>Additional Payments</relationshipLabel>
        <relationshipName>Additional_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Payment</label>
    <nameField>
        <displayFormat>ADP-{000000}</displayFormat>
        <label>Additional Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>